Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5513

HA backup fails if number of replicated queues exceeds number of channels.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.25
    • 0.27
    • C++ Clustering
    • None

    Description

      HA uses a single link and a session per queue to replicate queue data. That means the number of replicated queues is limited by the number of channels, which is 32k in current Qpid.

      To reproduce:

      • create a 2 node cluster.
      • declare 32769 queues

      Actual Result:

      • no error observed by the client declaring the queues or in the primary log.
      • backup broker exits with a critical error saying "not enough channels"

      In the short term it is not straightforward to remove the limit, however the error reporting needs to be fixed:

      Desired result:

      • client declaring the queues receives a "resource-limit-exceeded" exception with appropriate message.
      • primary logs an error indicating we exceeded the replicated queue limit
      • primary and backup broker continue to function normally.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: